fix: changed text-align spot

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -90,15 +90,16 @@ h6 {
 
 .section-header {
     text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
 }
 
 .section-body {
     padding: var(--section-body-padding);
-    text-align: horizontal;
 }
 
 .section-footer {
     padding: var(--section-footer-padding);
+    text-align: horizontal
 }
 
 .section-title {
